# jira-voc-assistant

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07be455430c8_phase2_initial_schema.py  8df2a6bbdd67_phase4_llm_drafts_classifications.py
backend/app/: config.py  db.py  deps.py  main.py
backend/app/api/: actions.py  admin.py  categories.py  dev.py  health.py  kpi.py  retrieval.py  tickets.py  uploads.py  webhook.py  ws.py
backend/app/core/: auth.py  crypto.py  logging.py  ws_manager.py
backend/app/models/: __init__.py  base.py  category.py  classification.py  draft.py  kpi_event.py  operator_action.py  prompt_template.py  reference.py  ticket.py  upload.py  user.py  webhook_inbox.py
backend/app/providers/embed/: base.py  local.py  voyage.py
backend/app/providers/kb/: base.py  confluence.py  mock.py
backend/app/providers/llm/: anthropic.py  base.py  mock.py
backend/app/providers/rag/: base.py  chroma.py
backend/app/providers/storage/: base.py  local.py
backend/app/providers/tracker/: base.py  jira.py  mock.py
backend/app/schemas/: ticket.py
backend/app/seed/: seed.py
backend/app/seed/corpus/: kb-001.md  kb-002.md  kb-003.md  kb-004.md  kb-005.md  kb-006.md
backend/app/services/: actions.py  chunk.py  classifier.py  drafter.py  kpi_cache.py  pipeline.py  reindex.py  retriever.py  webhook_retry.py
backend/tests/: test_crypto.py  test_kpi_cache.py  test_real_providers_skeleton.py  test_webhook_idempotency.py  test_ws_resume.py
ui/: kpi.html  (+2 more)
(+34 files in other folders)
